--- a/giftlink-backend/package.json
+++ b/giftlink-backend/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.3.0",
     "@testing-library/react": "^14.1.2",
+    "@types/bcryptjs": "^2.4.6",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
